parse/y.output

state 0
	$accept: .chunk $end 
	chunk1: .    (4)

	.  reduce 4 (src line 96)

	chunk  goto 1
	chunk1  goto 2

state 1
	$accept:  chunk.$end 

	$end  accept
	.  error


state 2
	chunk:  chunk1.    (1)
	chunk:  chunk1.laststat 
	chunk:  chunk1.laststat ';' 
	chunk1:  chunk1.stat 
	chunk1:  chunk1.';' 

	TBreak  shift 7
	TDo  shift 10
	TFor  shift 14
	TFunction  shift 15
	TGlobal  shift 19
	TIf  shift 13
	TLocal  shift 16
	TReturn  shift 6
	TRepeat  shift 12
	TWhile  shift 11
	TGoto  shift 18
	T2Colon  shift 17
	TIdent  shift 24
	'('  shift 23
	';'  shift 5
	.  reduce 1 (src line 76)

	stat  goto 4
	laststat  goto 3
	varlist  goto 8
	var  goto 20
	prefixexp  goto 9
	functioncall  goto 22
	afunctioncall  goto 21

state 3
	chunk:  chunk1 laststat.    (2)
	chunk:  chunk1 laststat.';' 

	';'  shift 25
	.  reduce 2 (src line 82)


state 4
	chunk1:  chunk1 stat.    (5)

	.  reduce 5 (src line 99)


state 5
	chunk1:  chunk1 ';'.    (6)

	.  reduce 6 (src line 102)


state 6
	laststat:  TReturn.    (32)
	laststat:  TReturn.exprlist 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  reduce 32 (src line 244)

	var  goto 41
	exprlist  goto 26
	expr  goto 27
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 7
	laststat:  TBreak.    (34)

	.  reduce 34 (src line 252)


state 8
	stat:  varlist.'=' exprlist 
	varlist:  varlist.',' var 

	'='  shift 44
	','  shift 45
	.  error


9: shift/reduce conflict (shift 50(0), red'n 9(0)) on '('
state 9
	stat:  prefixexp.    (9)
	var:  prefixexp.'[' expr ']' 
	var:  prefixexp.'.' TIdent 
	functioncall:  prefixexp.args 
	functioncall:  prefixexp.':' TIdent args 

	TString  shift 42
	'{'  shift 43
	'('  shift 50
	':'  shift 49
	'.'  shift 47
	'['  shift 46
	.  reduce 9 (src line 116)

	string  goto 52
	args  goto 48
	tableconstructor  goto 51

state 10
	stat:  TDo.block TEnd 
	chunk1: .    (4)

	.  reduce 4 (src line 96)

	chunk  goto 54
	chunk1  goto 2
	block  goto 53

state 11
	stat:  TWhile.expr TDo block TEnd 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 55
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 12
	stat:  TRepeat.block TUntil expr 
	chunk1: .    (4)

	.  reduce 4 (src line 96)

	chunk  goto 54
	chunk1  goto 2
	block  goto 56

state 13
	stat:  TIf.expr TThen block elseifs TEnd 
	stat:  TIf.expr TThen block elseifs TElse block TEnd 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 57
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 14
	stat:  TFor.TIdent '=' expr ',' expr TDo block TEnd 
	stat:  TFor.TIdent '=' expr ',' expr ',' expr TDo block TEnd 
	stat:  TFor.namelist TIn exprlist TDo block TEnd 

	TIdent  shift 58
	.  error

	namelist  goto 59

state 15
	stat:  TFunction.funcname funcbody 

	TIdent  shift 62
	.  error

	funcname  goto 60
	funcname1  goto 61

state 16
	stat:  TLocal.TFunction TIdent funcbody 
	stat:  TLocal.namelist '=' exprlist 
	stat:  TLocal.namelist 
	stat:  TLocal.namelist '<' TIdent '>' '=' exprlist 
	stat:  TLocal.namelist '<' TIdent '>' 

	TFunction  shift 63
	TIdent  shift 65
	.  error

	namelist  goto 64

state 17
	stat:  T2Colon.TIdent T2Colon 

	TIdent  shift 66
	.  error


state 18
	stat:  TGoto.TIdent 

	TIdent  shift 67
	.  error


state 19
	stat:  TGlobal.namelist '=' exprlist 
	stat:  TGlobal.namelist 
	stat:  TGlobal.TFunction TIdent funcbody 
	stat:  TGlobal.'<' TIdent '>' '*' 

	TFunction  shift 69
	TIdent  shift 65
	'<'  shift 70
	.  error

	namelist  goto 68

state 20
	varlist:  var.    (39)
	prefixexp:  var.    (82)

	'='  reduce 39 (src line 279)
	','  reduce 39 (src line 279)
	.  reduce 82 (src line 455)


state 21
	prefixexp:  afunctioncall.    (83)

	.  reduce 83 (src line 458)


state 22
	prefixexp:  functioncall.    (84)

	.  reduce 84 (src line 461)


state 23
	prefixexp:  '('.expr ')' 
	afunctioncall:  '('.functioncall ')' 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 71
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 72
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 24
	var:  TIdent.    (41)

	.  reduce 41 (src line 287)


state 25
	chunk:  chunk1 laststat ';'.    (3)

	.  reduce 3 (src line 88)


state 26
	laststat:  TReturn exprlist.    (33)
	exprlist:  exprlist.',' expr 

	','  shift 73
	.  reduce 33 (src line 248)


state 27
	exprlist:  expr.    (46)
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.TIDiv expr 
	expr:  expr.TShl expr 
	expr:  expr.TShr expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'~' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 

	TAnd  shift 75
	TOr  shift 74
	TEqeq  shift 80
	TNeq  shift 81
	TLte  shift 79
	TGte  shift 78
	T2Comma  shift 82
	TIDiv  shift 87
	TShl  shift 88
	TShr  shift 89
	'>'  shift 76
	'<'  shift 77
	'|'  shift 91
	'~'  shift 92
	'&'  shift 90
	'+'  shift 83
	'-'  shift 84
	'*'  shift 85
	'/'  shift 86
	'%'  shift 93
	'^'  shift 94
	.  reduce 46 (src line 311)


state 28
	expr:  TNil.    (48)

	.  reduce 48 (src line 319)


state 29
	expr:  TFalse.    (49)

	.  reduce 49 (src line 323)


state 30
	expr:  TTrue.    (50)

	.  reduce 50 (src line 327)


state 31
	expr:  TNumber.    (51)

	.  reduce 51 (src line 331)


state 32
	expr:  T3Comma.    (52)

	.  reduce 52 (src line 335)


state 33
	expr:  function.    (53)

	.  reduce 53 (src line 339)


34: shift/reduce conflict (shift 50(0), red'n 54(0)) on '('
state 34
	var:  prefixexp.'[' expr ']' 
	var:  prefixexp.'.' TIdent 
	expr:  prefixexp.    (54)
	functioncall:  prefixexp.args 
	functioncall:  prefixexp.':' TIdent args 

	TString  shift 42
	'{'  shift 43
	'('  shift 50
	':'  shift 49
	'.'  shift 47
	'['  shift 46
	.  reduce 54 (src line 342)

	string  goto 52
	args  goto 48
	tableconstructor  goto 51

state 35
	expr:  string.    (55)

	.  reduce 55 (src line 345)


state 36
	expr:  tableconstructor.    (56)

	.  reduce 56 (src line 348)


state 37
	expr:  '-'.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 95
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 38
	expr:  TNot.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 96
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 39
	expr:  '#'.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 97
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 40
	function:  TFunction.funcbody 

	'('  shift 99
	.  error

	funcbody  goto 98

state 41
	prefixexp:  var.    (82)

	.  reduce 82 (src line 455)


state 42
	string:  TString.    (81)

	.  reduce 81 (src line 449)


state 43
	tableconstructor:  '{'.'}' 
	tableconstructor:  '{'.fieldlist '}' 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 103
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'['  shift 104
	'#'  shift 39
	'}'  shift 100
	.  error

	var  goto 41
	expr  goto 105
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36
	fieldlist  goto 101
	field  goto 102

state 44
	stat:  varlist '='.exprlist 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	exprlist  goto 106
	expr  goto 27
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 45
	varlist:  varlist ','.var 

	TIdent  shift 24
	'('  shift 23
	.  error

	var  goto 107
	prefixexp  goto 108
	functioncall  goto 22
	afunctioncall  goto 21

state 46
	var:  prefixexp '['.expr ']' 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 109
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 47
	var:  prefixexp '.'.TIdent 

	TIdent  shift 110
	.  error


state 48
	functioncall:  prefixexp args.    (87)

	.  reduce 87 (src line 479)


state 49
	functioncall:  prefixexp ':'.TIdent args 

	TIdent  shift 111
	.  error


state 50
	args:  '('.')' 
	args:  '('.exprlist ')' 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	')'  shift 112
	.  error

	var  goto 41
	exprlist  goto 113
	expr  goto 27
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 51
	args:  tableconstructor.    (91)

	.  reduce 91 (src line 501)


state 52
	args:  string.    (92)

	.  reduce 92 (src line 504)


state 53
	stat:  TDo block.TEnd 

	TEnd  shift 114
	.  error


state 54
	block:  chunk.    (7)

	.  reduce 7 (src line 107)


state 55
	stat:  TWhile expr.TDo block TEnd 
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.TIDiv expr 
	expr:  expr.TShl expr 
	expr:  expr.TShr expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'~' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 

	TAnd  shift 75
	TDo  shift 115
	TOr  shift 74
	TEqeq  shift 80
	TNeq  shift 81
	TLte  shift 79
	TGte  shift 78
	T2Comma  shift 82
	TIDiv  shift 87
	TShl  shift 88
	TShr  shift 89
	'>'  shift 76
	'<'  shift 77
	'|'  shift 91
	'~'  shift 92
	'&'  shift 90
	'+'  shift 83
	'-'  shift 84
	'*'  shift 85
	'/'  shift 86
	'%'  shift 93
	'^'  shift 94
	.  error


state 56
	stat:  TRepeat block.TUntil expr 

	TUntil  shift 116
	.  error


state 57
	stat:  TIf expr.TThen block elseifs TEnd 
	stat:  TIf expr.TThen block elseifs TElse block TEnd 
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.TIDiv expr 
	expr:  expr.TShl expr 
	expr:  expr.TShr expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'~' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 

	TAnd  shift 75
	TOr  shift 74
	TThen  shift 117
	TEqeq  shift 80
	TNeq  shift 81
	TLte  shift 79
	TGte  shift 78
	T2Comma  shift 82
	TIDiv  shift 87
	TShl  shift 88
	TShr  shift 89
	'>'  shift 76
	'<'  shift 77
	'|'  shift 91
	'~'  shift 92
	'&'  shift 90
	'+'  shift 83
	'-'  shift 84
	'*'  shift 85
	'/'  shift 86
	'%'  shift 93
	'^'  shift 94
	.  error


state 58
	stat:  TFor TIdent.'=' expr ',' expr TDo block TEnd 
	stat:  TFor TIdent.'=' expr ',' expr ',' expr TDo block TEnd 
	namelist:  TIdent.    (44)

	'='  shift 118
	.  reduce 44 (src line 303)


state 59
	stat:  TFor namelist.TIn exprlist TDo block TEnd 
	namelist:  namelist.',' TIdent 

	TIn  shift 119
	','  shift 120
	.  error


state 60
	stat:  TFunction funcname.funcbody 

	'('  shift 99
	.  error

	funcbody  goto 121

state 61
	funcname:  funcname1.    (35)
	funcname:  funcname1.':' TIdent 
	funcname1:  funcname1.'.' TIdent 

	':'  shift 122
	'.'  shift 123
	.  reduce 35 (src line 258)


state 62
	funcname1:  TIdent.    (37)

	.  reduce 37 (src line 266)


state 63
	stat:  TLocal TFunction.TIdent funcbody 

	TIdent  shift 124
	.  error


state 64
	stat:  TLocal namelist.'=' exprlist 
	stat:  TLocal namelist.    (21)
	stat:  TLocal namelist.'<' TIdent '>' '=' exprlist 
	stat:  TLocal namelist.'<' TIdent '>' 
	namelist:  namelist.',' TIdent 

	'<'  shift 126
	'='  shift 125
	','  shift 120
	.  reduce 21 (src line 190)


state 65
	namelist:  TIdent.    (44)

	.  reduce 44 (src line 303)


state 66
	stat:  T2Colon TIdent.T2Colon 

	T2Colon  shift 127
	.  error


state 67
	stat:  TGoto TIdent.    (25)

	.  reduce 25 (src line 212)


state 68
	stat:  TGlobal namelist.'=' exprlist 
	stat:  TGlobal namelist.    (27)
	namelist:  namelist.',' TIdent 

	'='  shift 128
	','  shift 120
	.  reduce 27 (src line 220)


state 69
	stat:  TGlobal TFunction.TIdent funcbody 

	TIdent  shift 129
	.  error


state 70
	stat:  TGlobal '<'.TIdent '>' '*' 

	TIdent  shift 130
	.  error


state 71
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.TIDiv expr 
	expr:  expr.TShl expr 
	expr:  expr.TShr expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'~' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 
	prefixexp:  '(' expr.')' 

	TAnd  shift 75
	TOr  shift 74
	TEqeq  shift 80
	TNeq  shift 81
	TLte  shift 79
	TGte  shift 78
	T2Comma  shift 82
	TIDiv  shift 87
	TShl  shift 88
	TShr  shift 89
	'>'  shift 76
	'<'  shift 77
	'|'  shift 91
	'~'  shift 92
	'&'  shift 90
	'+'  shift 83
	'-'  shift 84
	'*'  shift 85
	'/'  shift 86
	'%'  shift 93
	'^'  shift 94
	')'  shift 131
	.  error


72: shift/reduce conflict (shift 132(0), red'n 84(0)) on ')'
state 72
	prefixexp:  functioncall.    (84)
	afunctioncall:  '(' functioncall.')' 

	')'  shift 132
	.  reduce 84 (src line 461)


state 73
	exprlist:  exprlist ','.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 133
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 74
	expr:  expr TOr.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 134
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 75
	expr:  expr TAnd.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 135
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 76
	expr:  expr '>'.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 136
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 77
	expr:  expr '<'.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 137
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 78
	expr:  expr TGte.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 138
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 79
	expr:  expr TLte.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 139
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 80
	expr:  expr TEqeq.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 140
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 81
	expr:  expr TNeq.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 141
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 82
	expr:  expr T2Comma.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 142
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 83
	expr:  expr '+'.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 143
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 84
	expr:  expr '-'.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 144
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 85
	expr:  expr '*'.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 145
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 86
	expr:  expr '/'.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 146
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 87
	expr:  expr TIDiv.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 147
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 88
	expr:  expr TShl.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 148
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 89
	expr:  expr TShr.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 149
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 90
	expr:  expr '&'.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 150
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 91
	expr:  expr '|'.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 151
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 92
	expr:  expr '~'.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 41
	expr  goto 152
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 22
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 93
	expr:  expr '%'.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 24
	TNumber  shift 31
	TString  shift 42
	'{'  shift 43
	'('  shift 23
	'-'  shift 37
	'#'  shift 39
	.  error
